# bpmnos-wasm

./: .gitignore  API.md  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  package.json
.github/workflows/: build-wasm.yml  pages.yml
demo/: index.html  worker.mjs
demo/samples/: Assignment_problem_instance.csv  DecisionTask_instance.csv  Simple_messaging.bpmn  Simple_messaging_instance.csv
docs/: engine-in-memory-inputs.md  wasm-build.md
src/: Bindings.cpp  Controller.cpp  Controller.h  Convert.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Monitor.cpp  Monitor.h
src/wasm/: Bindings.cpp
test/fixtures/: AdHocSubProcess.bpmn  Assignment_problem.bpmn  DecisionTask_with_enumeration.bpmn  Timer.bpmn  costs.csv
test/native/: choice_test.cpp  drive_test.cpp  message_test.cpp  sequential_entry_test.cpp  timer_test.cpp
test/wasm/: choice_test.mjs  drive_test.mjs  greedy_test.mjs  message_test.mjs  observe_test.mjs  sequential_entry_test.mjs  timer_test.mjs
types/: bpmnos.d.ts
web/: index.html
